--- a/ui5.yaml
+++ b/ui5.yaml
@@ -12,10 +12,10 @@ framework:
     libraries:
         - name: sap.ui.core
         - name: sap.m
-        - name: sap.f
-        - name: sap.tnt
-        - name: sap.ui.layout
-        - name: themelib_sap_fiori_3
+        # - name: sap.f
+        # - name: sap.tnt
+        # - name: sap.ui.layout
+        # - name: themelib_sap_fiori_3
 server:
     customMiddleware:
         - name: ui5-middleware-livereload
